--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,9 +2,24 @@ name: lint
 on: pull_request
 
 jobs:
-  test:
+  hadolint:
     runs-on: ubuntu-latest
     name: hadolint
     steps:
       - uses: actions/checkout@v2
       - uses: brpaz/hadolint-action@master
+  shellcheck:
+    runs-on: ubuntu-latest
+    name: shellcheck
+    steps:
+      - uses: actions/checkout@v2
+      - name: install shellcheck
+        env:
+          scversion: stable
+        run: |
+          wget -qO- "https://github.com/koalaman/shellcheck/releases/download/${scversion?}/shellcheck-${scversion?}.linux.x86_64.tar.xz" | tar -xJ
+          sudo cp "shellcheck-${scversion}/shellcheck" /usr/local/bin/
+      - name: test bats suite
+        run: shellcheck -s bash test/*.bats
+      - name: test utility scripts
+        run: shellcheck -s dash *.sh
